--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/index.html
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/index.html
@@ -10,23 +10,18 @@
 <body>
   <div class="Container">
     <div class="Container__Header">
-      <div class="Container__Header__HContent">
-      <div class="Container__Header__HContent__Avatar"><img src="../Images/avatar.png"></div>
-      <div class="Container__Header__HContent__Welcome"><h2>Welcome, Marina</h2></div>
-      <div class="Container__Header__HContent__MenuBtn"><img src="../Images/MenuBtn.png"></div>
-      </div>
+      <div class="Container__Header__Avatar"><img src="..//Images/avatar.png"></div>
+      <div class="Container__Header__Welcome">Welcome,Marina</div>
+      <div class="Container__Header__MenuBtn"><img src="../Images/MenuBtn.png"></div>
     </div>
+    <div class="Container__Main"></div>
     <div class="Container__Navbar">
-      <div class="Container__Navbar__NContent">
-        <div class="Container__Navbar__NContent--Navbtn"></div>
-        <div class="Container__Navbar__NContent--Navbtn"></div>
-        <div class="Container__Navbar__NContent--Navbtn"></div>
-        <div class="Container__Navbar__NContent--Navbtn"></div>
-      </div>
+      <div class="Container__Navbar--Btn"><img src="..//Images/home.png"></div>
+      <div class="Container__Navbar--Btn"><img src="..//Images/user.png"></div>
+      <div class="Container__Navbar--Btn"><img src="..//Images/menu.png"></div>
+      <div class="Container__Navbar--Btn"><img src="..//Images/stat.png"></div>
     </div>
-    <div class="Container__Roi">Roi</div>
-    <div class="Container__Wil">Wil</div>
-    <div class="Container__Yael">Yael</div>
-  </div>
+   </div>
+
 </body>
 </html>
