--- a/01-HTML-CSS/09-animations/OmriAharonov/index.html
+++ b/01-HTML-CSS/09-animations/OmriAharonov/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,12 @@
     <link rel="stylesheet" href="dist/style.css">
     <title>Animation</title>
 </head>
+
 <body>
-    <div class="animation">
-        <div class="ball">
-            <div class="box"></div>
-        </div>
+    <div class="animation"></div>
+    <div class="ball">
+        <div class="box"></div>
     </div>
 </body>
+
 </html>
