--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/index.html
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/index.html
@@ -14,7 +14,11 @@
       <div class="Container__Header__Welcome">Welcome,Marina</div>
       <div class="Container__Header__MenuBtn"><img src="../Images/MenuBtn.png"></div>
     </div>
-    <div class="Container__Main"></div>
+    <div class="Container__Main">
+      <div class="Container__Main__Wil"></div>
+      <div class="Container__Main__Roi"></div>
+      <div class="Container__Main__Yael"></div>
+    </div>
     <div class="Container__Navbar">
       <div class="Container__Navbar--Btn"><img src="..//Images/home.png"></div>
       <div class="Container__Navbar--Btn"><img src="..//Images/user.png"></div>
