--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
@@ -25,7 +25,7 @@
         <div class="myCart__grid__box">
             <img src="imgCart/myCart1.jpg">
             <div class="leftside">
-                <h3>Dracaena Houseplant</h3>
+                <h3>Dracaena </h3>
                 <p>Nontoxic</p>
                 <input type="number" min="1" value="1">
             </div>
