--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/monthly-tasks.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/monthly-tasks.html
@@ -26,7 +26,7 @@
         <div id="control">
             <div id="control__nav">
                 <label for="control__nav__toggle" class="control__nav__toggle__label">
-                    <span class="material-icons">menu fries</span>
+                    <span class="material-icons">menu</span>
                 </label>
                 <input type="checkbox" id="control__nav__toggle">
                 <nav class="hidden">
@@ -40,7 +40,7 @@
                 </nav>
             </div>
             <div id="control__mytasks">
-                <h3>my tasks</h3>
+                <h3 class="fancy">My Tasks</h3>
                 <div id="control__mytasks-square">
                     <h3>9</h3>
                 </div>
@@ -87,114 +87,7 @@
                         <div class="box__countdown5">5 days left</div>
                     </div>
                 </div>
-                <div class="box">
-                    <div id="box__flex">
-                        <div class="box__header">
-                            <div class="box__logo-square blue">
-                                <p class="box__logo">Bē</p>
-                            </div>
-                            <div class="box__title">
-                                <p class="box__title-text">portfolio</p>
-                                <p class="box__title-urg">high</p>
-                            </div>
-                        </div>
-                        <div class="box__expln">
-                            <h4>landing page</h4>
-                            <p class="box__expln-transp">nilson project</p>
-                        </div>
-                        <div class="box__countdown5">5 days left</div>
-                    </div>
-                </div>
-                <div class="box">
-                    <div id="box__flex">
-                        <div class="box__header">
-                            <div class="box__logo-square orange">
-                                <p class="box__logo">Bē</p>
-                            </div>
-                            <div class="box__title">
-                                <p class="box__title-text">portfolio</p>
-                                <p class="box__title-urg">high</p>
-                            </div>
-                        </div>
-                        <div class="box__expln">
-                            <h4>landing page</h4>
-                            <p class="box__expln-transp">nilson project</p>
-                        </div>
-                        <div class="box__countdown5">5 days left</div>
-                    </div>
-                </div>
-                <div class="box">
-                    <div id="box__flex">
-                        <div class="box__header">
-                            <div class="box__logo-square blue">
-                                <p class="box__logo">Bē</p>
-                            </div>
-                            <div class="box__title">
-                                <p class="box__title-text">portfolio</p>
-                                <p class="box__title-urg">high</p>
-                            </div>
-                        </div>
-                        <div class="box__expln">
-                            <h4>landing page</h4>
-                            <p class="box__expln-transp">nilson project</p>
-                        </div>
-                        <div class="box__countdown5">5 days left</div>
-                    </div>
-                </div>
-                <div class="box">
-                    <div id="box__flex">
-                        <div class="box__header">
-                            <div class="box__logo-square orange">
-                                <p class="box__logo">Bē</p>
-                            </div>
-                            <div class="box__title">
-                                <p class="box__title-text">portfolio</p>
-                                <p class="box__title-urg">high</p>
-                            </div>
-                        </div>
-                        <div class="box__expln">
-                            <h4>landing page</h4>
-                            <p class="box__expln-transp">nilson project</p>
-                        </div>
-                        <div class="box__countdown5">5 days left</div>
-                    </div>
-                </div>
-                <div class="box">
-                    <div id="box__flex">
-                        <div class="box__header">
-                            <div class="box__logo-square blue">
-                                <p class="box__logo">Bē</p>
-                            </div>
-                            <div class="box__title">
-                                <p class="box__title-text">portfolio</p>
-                                <p class="box__title-urg">high</p>
-                            </div>
-                        </div>
-                        <div class="box__expln">
-                            <h4>landing page</h4>
-                            <p class="box__expln-transp">nilson project</p>
-                        </div>
-                        <div class="box__countdown5">5 days left</div>
-                    </div>
-                </div>
-                <div class="box">
-                    <div id="box__flex">
-                        <div class="box__header">
-                            <div class="box__logo-square orange">
-                                <p class="box__logo">Bē</p>
-                            </div>
-                            <div class="box__title">
-                                <p class="box__title-text">portfolio</p>
-                                <p class="box__title-urg">high</p>
-                            </div>
-                        </div>
-                        <div class="box__expln">
-                            <h4>landing page</h4>
-                            <p class="box__expln-transp">nilson project</p>
-                        </div>
-                        <div class="box__countdown5">5 days left</div>
-                    </div>
-                </div>
+                
             </div>
             <div id="landing__task__descr">
                 <span id="landing__task__descr__logo" class="iconify" data-icon="majesticons:pencil-line"
@@ -271,7 +164,7 @@
             </div>
         </main>
     </div>
-
+<script src="./app.js"></script>
 </html>
 
 </body>
