--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/monthly-tasks.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/monthly-tasks.html
@@ -87,6 +87,42 @@
                         <div class="box__countdown5">5 days left</div>
                     </div>
                 </div>
+                <div class="box">
+                    <div id="box__flex">
+                        <div class="box__header">
+                            <div class="box__logo-square orange">
+                                <p class="box__logo">Bē</p>
+                            </div>
+                            <div class="box__title">
+                                <p class="box__title-text">portfolio</p>
+                                <p class="box__title-urg">high</p>
+                            </div>
+                        </div>
+                        <div class="box__expln">
+                            <h4>landing page</h4>
+                            <p class="box__expln-transp">nilson project</p>
+                        </div>
+                        <div class="box__countdown5">5 days left</div>
+                    </div>
+                </div>
+                <div class="box">
+                    <div id="box__flex">
+                        <div class="box__header">
+                            <div class="box__logo-square orange">
+                                <p class="box__logo">Bē</p>
+                            </div>
+                            <div class="box__title">
+                                <p class="box__title-text">portfolio</p>
+                                <p class="box__title-urg">high</p>
+                            </div>
+                        </div>
+                        <div class="box__expln">
+                            <h4>landing page</h4>
+                            <p class="box__expln-transp">nilson project</p>
+                        </div>
+                        <div class="box__countdown5">5 days left</div>
+                    </div>
+                </div>
                 
             </div>
             <div id="landing__task__descr">
