--- a/02-JavaScript/04-functions/room 4 calc/INT calc.html
+++ b/02-JavaScript/04-functions/room 4 calc/INT calc.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BMI calc</title>
+    <title>Document</title>
 </head>
 <body>
-    <script src="./BMI calc.html"></script>
+    
 </body>
+<script src="./INT calc.js"></script>
 </html>
