--- a/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/Wallet.html
+++ b/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/Wallet.html
@@ -20,22 +20,23 @@
         <div class="wallet-banner">
             <div class="wallet-banner__item" id="rose">
                 <svg viewBox="0 0 128 128">
-                    <g>
-                        <path d="M115,25.4C105.3,13,91.1,5.1,75.4,5.1C45,5.1,22.7,33.4,22.7,64c0,21.3,14.2,37.3,29.9,37.3
-                        c1.5,0,2.9-0.1,4.4-0.4C46.4,93.2,39.7,79.2,39.7,64c0-24.2,16.4-43.1,35.7-43.1c21.1,0,35.7,20.9,35.7,43.1
-                        c-0.1,16.4-5.9,32.7-16.2,44.7c-9,10.5-20.6,17.1-33.4,19.2c0,0,1.1,0.1,2.5,0.1c35.3,0,64-28.7,64-64
-                        C128,49.5,123.2,36.1,115,25.4z M105.3,64c0-21.3-14.2-37.3-29.9-37.3c-1.5,0-2.9,0.1-4.4,0.4C81.6,34.8,88.3,48.8,88.3,64
-                        c0,24.2-16.4,43.1-35.7,43.1c-21.1,0-35.7-20.9-35.7-43.1c0.1-16.4,5.9-32.7,16.2-44.7c9-10.5,20.6-17.1,33.4-19.2
-                        c0,0-1.1-0.1-2.5-0.1C28.7,0,0,28.7,0,64c0,14.5,4.8,27.9,13,38.6c9.7,12.4,23.9,20.2,39.6,20.2C83,122.9,105.3,94.6,105.3,64z" />
+                    <g id="rose">
+                        <path
+                            d="M115,25.4C105.3,13,91.1,5.1,75.4,5.1C45,5.1,22.7,33.4,22.7,64c0,21.3,14.2,37.3,29.9,37.3
+                       c1.5,0,2.9-0.1,4.4-0.4C46.4,93.2,39.7,79.2,39.7,64c0-24.2,16.4-43.1,35.7-43.1c21.1,0,35.7,20.9,35.7,43.1
+                       c-0.1,16.4-5.9,32.7-16.2,44.7c-9,10.5-20.6,17.1-33.4,19.2c0,0,1.1,0.1,2.5,0.1c35.3,0,64-28.7,64-64
+                       C128,49.5,123.2,36.1,115,25.4z M105.3,64c0-21.3-14.2-37.3-29.9-37.3c-1.5,0-2.9,0.1-4.4,0.4C81.6,34.8,88.3,48.8,88.3,64
+                       c0,24.2-16.4,43.1-35.7,43.1c-21.1,0-35.7-20.9-35.7-43.1c0.1-16.4,5.9-32.7,16.2-44.7c9-10.5,20.6-17.1,33.4-19.2
+                       c0,0-1.1-0.1-2.5-0.1C28.7,0,0,28.7,0,64c0,14.5,4.8,27.9,13,38.6c9.7,12.4,23.9,20.2,39.6,20.2C83,122.9,105.3,94.6,105.3,64z" />
                     </g>
                 </svg>
                 <p>
                     ROSE 36%
                 </p>
             </div>
-            <div class="wallet-banner__item" id="avax">
+            <div class="wallet-banner__item">
                 <svg viewBox="0 0 254 254">
-                    <g>
+                    <g id="avax">
                         <path class="st1" d="M171.8,130.3c4.4-7.6,11.5-7.6,15.9,0l27.4,48.1c4.4,7.6,0.8,13.8-8,13.8h-55.2c-8.7,0-12.3-6.2-8-13.8
                         L171.8,130.3z M118.8,37.7c4.4-7.6,11.4-7.6,15.8,0l6.1,11L155.1,74c3.5,7.2,3.5,15.7,0,22.9l-48.3,83.7
                         c-4.4,6.8-11.7,11.1-19.8,11.6H46.9c-8.8,0-12.4-6.1-8-13.8L118.8,37.7z" />
@@ -45,9 +46,9 @@
                     AVAX 24%
                 </p>
             </div>
-            <div class="wallet-banner__item"  id="link">
+            <div class="wallet-banner__item">
                 <svg viewBox="-3 0 43 50">
-                    <g>
+                    <g id="link">
                         <path
                             d="M18.9,0l-4,2.3L4,8.6,0,10.9V32.7L4,35l11,6.3,4,2.3,4-2.3L33.8,35l4-2.3V10.9l-4-2.3L22.9,2.3ZM8,28.1V15.5L18.9,9.2l10.9,6.3V28.1L18.9,34.4Z" />
                     </g>
@@ -56,9 +57,9 @@
                     LINK 18%
                 </p>
             </div>
-            <div class="wallet-banner__item" id="busd">
+            <div class="wallet-banner__item">
                 <svg viewBox="0 0 336.41 337.42">
-                    <g>
+                    <g id="busd">
                         <path class="cls-1" d="M168.2.71l41.5,42.5L105.2,147.71l-41.5-41.5Z" />
                         <path class="cls-1" d="M231.2,63.71l41.5,42.5L105.2,273.71l-41.5-41.5Z" />
                         <path class="cls-1" d="M42.2,126.71l41.5,42.5-41.5,41.5L.7,169.21Z" />
@@ -69,9 +70,9 @@
                     BUSD 21%
                 </p>
             </div>
-            <div class="wallet-banner__item" id="doge">
+            <div class="wallet-banner__item">
                 <svg viewBox="0 0 2000 2000">
-                    <g>
+                    <g id="doge">
                         <path
                             d="M1024 659H881.12v281.69h224.79v117.94H881.12v281.67H1031c38.51 0 316.16 4.35 315.73-327.72S1077.44 659 1024 659z" />
                         <path
@@ -82,9 +83,9 @@
                     DOGE 69%
                 </p>
             </div>
-            <div class="wallet-banner__item" id="btc">
+            <div class="wallet-banner__item">
                 <svg viewBox="0 0 4091.27 4091.73">
-                    <g>
+                    <g id="btc">
                         <path
                             d="M4030.06 2540.77c-273.24,1096.01 -1383.32,1763.02 -2479.46,1489.71 -1095.68,-273.24 -1762.69,-1383.39 -1489.33,-2479.31 273.12,-1096.13 1383.2,-1763.19 2479,-1489.95 1096.06,273.24 1763.03,1383.51 1489.76,2479.57l0.02 -0.02z" />
                         <path fill="#2E3137"
@@ -95,9 +96,9 @@
                     BTC 17%
                 </p>
             </div>
-            <div class="wallet-banner__item" id="uni">
+            <div class="wallet-banner__item">
                 <svg viewBox="0 0 168.3 193.8">
-                    <g>
+                    <g id="uni">
                         <path d="M66,44.1c-2.1-0.3-2.2-0.4-1.2-0.5c1.9-0.3,6.3,0.1,9.4,0.8c7.2,1.7,13.7,6.1,20.6,13.8l1.8,2.1l2.6-0.4
                     c11.1-1.8,22.5-0.4,32,4c2.6,1.2,6.7,3.6,7.2,4.2c0.2,0.2,0.5,1.5,0.7,2.8c0.7,4.7,0.4,8.2-1.1,10.9c-0.8,1.5-0.8,1.9-0.3,3.2
                     c0.4,1,1.6,1.7,2.7,1.7c2.4,0,4.9-3.8,6.1-9.1l0.5-2.1l0.9,1c5.1,5.7,9.1,13.6,9.7,19.2l0.2,1.5l-0.9-1.3c-1.5-2.3-2.9-3.8-4.8-5.1
@@ -146,9 +147,9 @@
                     UNI 9%
                 </p>
             </div>
-            <div class="wallet-banner__item" id="klay">
+            <div class="wallet-banner__item">
                 <svg viewBox="0 0 2000 1975.1">
-                    <g>
+                    <g id="klay">
                         <path d="M1047.4,982.5l683.3,678.3c359.1-380.9,359.1-975.7,0-1356.6" />
                         <path d="M997.5,1027.4l-673.3,668.3l673.3,279.3l673.3-279.3" />
                         <path d="M972.6,957.6l698.3-693.3L1027.4,0L389,1541.2L972.6,957.6z" />
@@ -159,9 +160,14 @@
                     KLAY 5%
                 </p>
             </div>
-            <div class="wallet-banner__item"  id="axs">
+            <div class="wallet-banner__item">
                 <svg viewBox="0 0 1000 1000">
-                    <g>
+                    <style>
+                        .axs {
+                            fill: #2E3137;
+                        }
+                    </style>
+                    <g id="axs">
                         <path
                             d="M500,0c276.1,0,500,223.9,500,500s-223.9,500-500,500S0,776.1,0,500S223.9,0,500,0L500,0z" />
                         <path class="axs"
@@ -178,9 +184,9 @@
                     AXS 12%
                 </p>
             </div>
-            <div class="wallet-banner__item" id="xlm">
+            <div class="wallet-banner__item">
                 <svg viewBox="0 -20 250 220">
-                    <g>
+                    <g id="xlm">
                         <path
                             d="M203,26.16l-28.46,14.5-137.43,70a82.49,82.49,0,0,1-.7-10.69A81.87,81.87,0,0,1,158.2,28.6l16.29-8.3,2.43-1.24A100,100,0,0,0,18.18,100q0,3.82.29,7.61a18.19,18.19,0,0,1-9.88,17.58L0,129.57V150l25.29-12.89,0,0,8.19-4.18,8.07-4.11v0L186.43,55l16.28-8.29,33.65-17.15V9.14Z" />
                         <path
