--- a/02-JavaScript/00-introduction/Example/index.html
+++ b/02-JavaScript/00-introduction/Example/index.html
@@ -11,6 +11,6 @@
     <input type="color" name="" id="" onchange='changeColor(event)'>
     <h1>Counter: <span id='theResult'>0</span></h1>
     <button onclick="addone()">Add 1</button>
-    
+    <script src='index.js'></script>
 </body>
 </html>
