--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/index.html
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/index.html
@@ -5,27 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="dist/style.css">
-  <title>Document</title>
+  <title>Gauge</title>
 </head>
 <body>
-  <div class="Container">
-    <div class="Container__Header">
-      <div class="Container__Header__Avatar"><img src="..//Images/avatar.png"></div>
-      <div class="Container__Header__Welcome">Welcome,Marina</div>
-      <div class="Container__Header__MenuBtn"><img src="../Images/MenuBtn.png"></div>
+  <div class="container">
+    <div class="gauge-a"></div>
+    <div class="gauge-b"></div>
+    <div class="gauge-c"></div>
+    <div class="gauge-data">
+    <h1 id="percent">0%</h1>
     </div>
-    <div class="Container__Main">
-      <div class="Container__Main__Wil"></div>
-      <div class="Container__Main__Roi"></div>
-      <div class="Container__Main__Yael"></div>
-    </div>
-    <div class="Container__Navbar">
-      <div class="Container__Navbar--Btn"><img src="..//Images/home.png"></div>
-      <div class="Container__Navbar--Btn"><img src="..//Images/user.png"></div>
-      <div class="Container__Navbar--Btn"><img src="..//Images/menu.png"></div>
-      <div class="Container__Navbar--Btn"><img src="..//Images/stat.png"></div>
-    </div>
-   </div>
-
+  </div>
 </body>
 </html>
