--- a/02-JavaScript/04-functions/leon hw/function2-3.html
+++ b/02-JavaScript/04-functions/leon hw/function2-3.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="function2.js"></script>
+    <script src="function2-3.js"></script>
     
 </body>
 </html>
