--- a/02-JavaScript/04-functions/Etan/exercise 3.html
+++ b/02-JavaScript/04-functions/Etan/exercise 3.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Third exercise</title>
 </head>
 <body>
     
 </body>
-<script src="./INT calc.js
-"></script>
+<script src="./exercise 3.js"></script>
 </html>
