--- a/02-JavaScript/04-functions/jenia/jenia.html
+++ b/02-JavaScript/04-functions/jenia/jenia.html
@@ -10,6 +10,6 @@
 
 
     
-    <script src="/jenia.js"></script>
+    <script src="/02-JavaScript/04-functions/jenia/jenia.js"></script>
 </body>
 </html>
