--- a/02-JavaScript/04-functions/Alex Chaim Shimon Michael/index.html
+++ b/02-JavaScript/04-functions/Alex Chaim Shimon Michael/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+
+    <!-- <button onclick='bmicalc()'> CHECK BMI </button> -->
     <script src='BMI.js'></script>
+
 </body>
 </html>
