--- a/01-HTML-CSS/09-animations/Andrew/final project/Wallet.html
+++ b/01-HTML-CSS/09-animations/Andrew/final project/Wallet.html
@@ -11,10 +11,43 @@
 
 <body>
     <div class="header">
-        <button class="header__icon"></button>
+        <button class="header__icon">
+            <svg viewBox="289.5 128 14 17">
+                <g transform="matrix(1, 0, 0, 1, 112.890244, 90.37265)">
+                    <path class="st3" d="M185.03,50.46h-2.97c-1.1,0-2-0.9-2-2v-3.92c0-1.1,0.9-2,2-2h2.97c1.1,0,2,0.9,2,2v3.92
+			C187.03,49.56,186.13,50.46,185.03,50.46z" style="fill: rgb(255, 255, 255);"></path>
+                    <path class="st4" d="M187.13,48.35h-7.23c-1,0-1.83-0.82-1.83-1.83v0c0-1,0.82-1.83,1.83-1.83h7.23c1,0,1.83,0.82,1.83,1.83v0
+			C188.96,47.52,188.14,48.35,187.13,48.35z" style="fill: rgb(153, 153, 153);"></path>
+                    <path class="st5" d="M176.67,43.41c0-2.37,1.94-4.31,4.31-4.31"
+                        style="fill: none; stroke: rgb(153, 153, 153); stroke-linecap: round; stroke-miterlimit: 10;">
+                    </path>
+                    <path class="st5" d="M180.97,53.9c-2.37,0-4.31-1.94-4.31-4.31"
+                        style="fill: none; stroke: rgb(153, 153, 153); stroke-linecap: round; stroke-miterlimit: 10;">
+                    </path>
+                    <path class="st5" d="M190.41,49.59c0,2.37-1.94,4.31-4.31,4.31"
+                        style="fill: none; stroke: rgb(153, 153, 153); stroke-linecap: round; stroke-miterlimit: 10;">
+                    </path>
+                    <path class="st5" d="M186.1,39.1c2.37,0,4.31,1.94,4.31,4.31"
+                        style="fill: none; stroke: rgb(153, 153, 153); stroke-linecap: round; stroke-miterlimit: 10;">
+                    </path>
+                </g>
+            </svg>
+        </button>
         <button class="header__item">Tokens</button>
         <button class="header__item">Cards</button>
-        <button class="header__icon"></button>
+        <button class="header__icon" id="bell">
+            <svg viewBox="240 125 11 17">
+                <path d="M85.9,50.35c-0.28,0.28-0.66,0.44-1.06,0.44h-7.99c-0.4,0-0.78-0.16-1.06-0.44c-0.48-0.48-0.5-1.55-0.01-2.19
+			    c0.38-0.49,0.66-1.05,0.66-1.67v-2.47c0-2.57,2.2-4.63,4.83-4.39c2.3,0.21,3.99,2.27,3.99,4.58v2.19c0,0.58,0.15,1.18,0.55,1.61
+			    C86.35,48.59,86.4,49.85,85.9,50.35z"
+                    style="fill: none; stroke: #df9564; stroke-miterlimit: 10; stroke-width: 1.5px;"
+                    transform="matrix(1, 0, 0, 1, 164.981976, 87.621326)"></path>
+                <path d="M81.64,53.62h-1.59c-0.53,0-0.96-0.43-0.96-0.96l0,0c0-0.53,0.43-0.96,0.96-0.96h1.59
+			    c0.53,0,0.96,0.43,0.96,0.96l0,0C82.6,53.18,82.17,53.62,81.64,53.62z"
+                    style="fill: none; stroke: #df9564; stroke-miterlimit: 10; stroke-width: 1.5px;"
+                    transform="matrix(1, 0, 0, 1, 164.981976, 87.621326)"></path>
+            </svg>
+        </button>
     </div>
     <div class="wallet">
         <div class="wallet-banner">
@@ -34,9 +67,9 @@
                     ROSE 36%
                 </p>
             </div>
-            <div class="wallet-banner__item">
+            <div class="wallet-banner__item" id="avax">
                 <svg viewBox="0 0 254 254">
-                    <g id="avax">
+                    <g>
                         <path class="st1" d="M171.8,130.3c4.4-7.6,11.5-7.6,15.9,0l27.4,48.1c4.4,7.6,0.8,13.8-8,13.8h-55.2c-8.7,0-12.3-6.2-8-13.8
                         L171.8,130.3z M118.8,37.7c4.4-7.6,11.4-7.6,15.8,0l6.1,11L155.1,74c3.5,7.2,3.5,15.7,0,22.9l-48.3,83.7
                         c-4.4,6.8-11.7,11.1-19.8,11.6H46.9c-8.8,0-12.4-6.1-8-13.8L118.8,37.7z" />
@@ -46,9 +79,9 @@
                     AVAX 24%
                 </p>
             </div>
-            <div class="wallet-banner__item">
+            <div class="wallet-banner__item" id="link">
                 <svg viewBox="-3 0 43 50">
-                    <g id="link">
+                    <g>
                         <path
                             d="M18.9,0l-4,2.3L4,8.6,0,10.9V32.7L4,35l11,6.3,4,2.3,4-2.3L33.8,35l4-2.3V10.9l-4-2.3L22.9,2.3ZM8,28.1V15.5L18.9,9.2l10.9,6.3V28.1L18.9,34.4Z" />
                     </g>
@@ -57,9 +90,9 @@
                     LINK 18%
                 </p>
             </div>
-            <div class="wallet-banner__item">
+            <div class="wallet-banner__item" id="busd">
                 <svg viewBox="0 0 336.41 337.42">
-                    <g id="busd">
+                    <g>
                         <path class="cls-1" d="M168.2.71l41.5,42.5L105.2,147.71l-41.5-41.5Z" />
                         <path class="cls-1" d="M231.2,63.71l41.5,42.5L105.2,273.71l-41.5-41.5Z" />
                         <path class="cls-1" d="M42.2,126.71l41.5,42.5-41.5,41.5L.7,169.21Z" />
@@ -70,9 +103,9 @@
                     BUSD 21%
                 </p>
             </div>
-            <div class="wallet-banner__item">
+            <div class="wallet-banner__item" id="doge">
                 <svg viewBox="0 0 2000 2000">
-                    <g id="doge">
+                    <g>
                         <path
                             d="M1024 659H881.12v281.69h224.79v117.94H881.12v281.67H1031c38.51 0 316.16 4.35 315.73-327.72S1077.44 659 1024 659z" />
                         <path
@@ -83,9 +116,9 @@
                     DOGE 69%
                 </p>
             </div>
-            <div class="wallet-banner__item">
+            <div class="wallet-banner__item" id="btc">
                 <svg viewBox="0 0 4091.27 4091.73">
-                    <g id="btc">
+                    <g>
                         <path
                             d="M4030.06 2540.77c-273.24,1096.01 -1383.32,1763.02 -2479.46,1489.71 -1095.68,-273.24 -1762.69,-1383.39 -1489.33,-2479.31 273.12,-1096.13 1383.2,-1763.19 2479,-1489.95 1096.06,273.24 1763.03,1383.51 1489.76,2479.57l0.02 -0.02z" />
                         <path fill="#2E3137"
@@ -96,9 +129,9 @@
                     BTC 17%
                 </p>
             </div>
-            <div class="wallet-banner__item">
+            <div class="wallet-banner__item" id="uni">
                 <svg viewBox="0 0 168.3 193.8">
-                    <g id="uni">
+                    <g>
                         <path d="M66,44.1c-2.1-0.3-2.2-0.4-1.2-0.5c1.9-0.3,6.3,0.1,9.4,0.8c7.2,1.7,13.7,6.1,20.6,13.8l1.8,2.1l2.6-0.4
                     c11.1-1.8,22.5-0.4,32,4c2.6,1.2,6.7,3.6,7.2,4.2c0.2,0.2,0.5,1.5,0.7,2.8c0.7,4.7,0.4,8.2-1.1,10.9c-0.8,1.5-0.8,1.9-0.3,3.2
                     c0.4,1,1.6,1.7,2.7,1.7c2.4,0,4.9-3.8,6.1-9.1l0.5-2.1l0.9,1c5.1,5.7,9.1,13.6,9.7,19.2l0.2,1.5l-0.9-1.3c-1.5-2.3-2.9-3.8-4.8-5.1
@@ -147,9 +180,9 @@
                     UNI 9%
                 </p>
             </div>
-            <div class="wallet-banner__item">
+            <div class="wallet-banner__item" id="klay">
                 <svg viewBox="0 0 2000 1975.1">
-                    <g id="klay">
+                    <g>
                         <path d="M1047.4,982.5l683.3,678.3c359.1-380.9,359.1-975.7,0-1356.6" />
                         <path d="M997.5,1027.4l-673.3,668.3l673.3,279.3l673.3-279.3" />
                         <path d="M972.6,957.6l698.3-693.3L1027.4,0L389,1541.2L972.6,957.6z" />
@@ -160,14 +193,14 @@
                     KLAY 5%
                 </p>
             </div>
-            <div class="wallet-banner__item">
+            <div class="wallet-banner__item" id="axs">
                 <svg viewBox="0 0 1000 1000">
                     <style>
                         .axs {
                             fill: #2E3137;
                         }
                     </style>
-                    <g id="axs">
+                    <g>
                         <path
                             d="M500,0c276.1,0,500,223.9,500,500s-223.9,500-500,500S0,776.1,0,500S223.9,0,500,0L500,0z" />
                         <path class="axs"
@@ -184,9 +217,9 @@
                     AXS 12%
                 </p>
             </div>
-            <div class="wallet-banner__item">
+            <div class="wallet-banner__item" id="xlm">
                 <svg viewBox="0 -20 250 220">
-                    <g id="xlm">
+                    <g>
                         <path
                             d="M203,26.16l-28.46,14.5-137.43,70a82.49,82.49,0,0,1-.7-10.69A81.87,81.87,0,0,1,158.2,28.6l16.29-8.3,2.43-1.24A100,100,0,0,0,18.18,100q0,3.82.29,7.61a18.19,18.19,0,0,1-9.88,17.58L0,129.57V150l25.29-12.89,0,0,8.19-4.18,8.07-4.11v0L186.43,55l16.28-8.29,33.65-17.15V9.14Z" />
                         <path
