--- a/02-JavaScript/04-functions/yael/bigNum.html
+++ b/02-JavaScript/04-functions/yael/bigNum.html
@@ -7,8 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <input type="date" id="DOB">
-    <button id="calcAge" onclick="caclAge();"></button> -->
-    <script src="index1.js"></script>
+    <script src="bigNum.js"></script>
+
 </body>
 </html>
