--- a/01-HTML-CSS/09-animations/CSSfinal pro/index.html
+++ b/01-HTML-CSS/09-animations/CSSfinal pro/index.html
@@ -7,12 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="dist/style.css">
+    <link rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=e8b6">
 </head>
 
 <body>
-    <div class="searchbar">
-        <h1>&#x1F50D</h1>
-        <h2>searchbar</h2>
+    <div class="searchBox">
+
+        <input class="searchInput"type="text" name="" placeholder="Search">
+        <button class="searchButton" href="#">
+            <span class="material-icons-outlined">
+                search
+                </span>
+        </button>
     </div>
     <div class="main">
         <div class="fruits"><img
