--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/home.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/home.html
@@ -18,8 +18,8 @@
                 <nav>
                     <ul>
                         <li><a href="home.html"><i class="material-icons white-color">home</i></a></li>
-                        <li><a href="info.html"><i class="material-icons white-color">email</i></a></li>
-                        <li><a href="#"><i class="material-icons white-color">pie_chart</i></a></li>
+                        <li><a href="#"><i class="material-icons white-color">email</i></a></li>
+                        <li><a href="info.html"><i class="material-icons white-color">pie_chart</i></a></li>
                         <li id="monthly-tasks"><a href="monthly-tasks.html"><i
                                     class="material-icons white-color">grid_view</i></a></li>
                     </ul>
