--- a/01-HTML-CSS/09-animations/group - Or Noa Etan/info.html
+++ b/01-HTML-CSS/09-animations/group - Or Noa Etan/info.html
@@ -25,6 +25,33 @@
                     </ul>
                 </nav>
             </div>
+        </div>
+        <div id="landing__dailytasksdone">
+            <div class="box1">
+                Daily Tasks Done
+            </div>
+            <div class="box2">
+                30 nov, 2021
+            </div>
+            <div class="box3">
+
+            </div>
+            <div class="box">
+                Mo
+            </div>
+            <div class="box">
+                Tu
+            </div>
+            <div class="box">
+                We
+            </div>
+            <div class="box">
+                Th
+            </div>
+            <div class="box">
+                Fr
+            </div>
+        </div>
     </div>
 
 </body>
