--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/cartpage.html
@@ -86,6 +86,25 @@
             <button class="button__checkout">Checkout</button>
         </div>
     </div>
+
+    <div class="cartgarden">
+        <div class="tree">
+            <div class="flowerCircle">
+                <span class="firstPetal"></span>
+                <span class="secondPetal"></span>
+                <span class="thirdPetal"></span>
+                <span class="fourPetal"></span>
+                <span class="fivePetal"></span>
+            </div>
+
+            <span class="tree__leaf tree__leaf--left"></span>
+            <span class="tree__leaf tree__leaf--right"></span>
+
+
+        </div>
+        <img src="imgCart/grass.jpg">
+
+    </div>
 </body>
 
 </html>
