--- a/01-HTML-CSS/09-animations/OmriAharonov/weather/locationDetails_Omri.html
+++ b/01-HTML-CSS/09-animations/OmriAharonov/weather/locationDetails_Omri.html
@@ -27,11 +27,11 @@
         </div>
         <div class="details__general">
             <div class="measure">Temperature</div>
-            <div class="measure_units">Celcius</div>
+            <div class="measure_units"><span>Celcius</span> <i class="fas fa-chevron-right"></i></div>
             <div class="measure">Wind Speed</div>
-            <div class="measure_units">m/s</div>
+            <div class="measure_units"><span>m/s</span> <i class="fas fa-chevron-right"></i></div>
             <div class="measure">Source</div>
-            <div class="measure_units">weather.gov</div>
+            <div class="measure_units"><span>weather.gov</span> <i class="fas fa-chevron-right"></i></div>
         </div>
         <div class="details__navBar"></div>
     </div>
