--- a/02-JavaScript/04-functions/Etan/exercise 4.html
+++ b/02-JavaScript/04-functions/Etan/exercise 4.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./dist/exercise 4.css">
     <title>fourth and last exercise</title>
 </head>
 <body>
-    
+    <input id='numInput' />
+<button id='applyNum'>Apply Number</button>
+
+<div id="numCon"></div>
 </body>
 <script src="./exercise 4.js"></script>
 </html>
