--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/index.html
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/index.html
@@ -8,13 +8,8 @@
   <title>Gauge</title>
 </head>
 <body>
-  <div class="container">
-    <div class="gauge-a"></div>
-    <div class="gauge-b"></div>
-    <div class="gauge-c"></div>
-    <div class="gauge-data">
-    <h1 id="percent">0%</h1>
-    </div>
-  </div>
+    <svg width="500" height="500" fill="black" >
+      <circle cx="200" cy="200" r="100"/>
+    </svg>
 </body>
 </html>
