--- a/01-HTML-CSS/09-animations/tamir/tamir.html
+++ b/01-HTML-CSS/09-animations/tamir/tamir.html
@@ -6,32 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dist/tamir.css">
-    <title>try</title>
+    <title>html project</title>
 </head>
 
 <body>
     <nav class="nav">
-        <ul class="nav__manu">
-            <li class="youtube"><a href="https://www.youtube.com/">you<span class="nav__span">tube</span></a></li>
-            <li class="zoom"><a href="https://www.facebook.com/#!/">face<span class="nav__span--activ">book</span></a></li>
-            <li> <a href="https://www.whatsapp.com/">whats<span class="nav__span--green">app</span></a></li>
-            <li> <a href="https://www.instagram.com/">insta<span class="nav__span--pink">gram</span></a></li>
-        </ul>
+
     </nav>
-<div class="all">
-    <div class="pupimg">
-        <img src="https://picsum.photos/200" alt="">
-    </div>
-    <div class="pupimg">
-        <img src="https://picsum.photos/200" alt="">
-    </div>
-    <div class="pupimg">
-        <img src="https://picsum.photos/200" alt="">
-    </div>
-    <div class="pupimg">
-        <img src="https://picsum.photos/200" alt="">
-    </div>
-</div>
+    <section1 class="section1">
+        <img class="saction1__img" src="audi/2.png" alt="">
+        <p class="saction1__info">AUDI A8 EXTERIOR LIGHTING</p>
+        <h1 class="saction1__sti">Meant to
+            Cause a Seen.</h1>
+        <img class="img" src="audi/1.png" alt="">
+
+
+    </section1>
+    <section2 class="section2">
+        <img class="saction2__img" src="audi/3.png" alt="">
+        <p class="saction2__info">THE ALL-NEW 2019 AUDI A8</p>
+        <h1 class="saction2__sti">Luxury found the
+            vehicle it deserves.</h1>
+        <h3 class="saction2__minfo">The dramatic stretch of the top light bar helps emphasize the width of the Audi A8.
+            Using advanced OLED lighting technology, the available OLED taillights with animation perform a
+            choreographed dance of light when the vehicle is locked or unlocked.
+        </h3>
+    </section2>
+    <section3 class="section3">
+        <img class="saction3__img" src="audi/5.png" alt="">
+
+    </section3>
 </body>
 
 </html>
