--- a/01-HTML-CSS/09-animations/Andrew/final project/Wallet.html
+++ b/01-HTML-CSS/09-animations/Andrew/final project/Wallet.html
@@ -47,6 +47,9 @@
                     style="fill: none; stroke: #df9564; stroke-miterlimit: 10; stroke-width: 1.5px;"
                     transform="matrix(1, 0, 0, 1, 164.981976, 87.621326)"></path>
             </svg>
+            <div class="header__icon__notification">
+
+            </div>
         </button>
     </div>
     <div class="wallet">
