--- a/01-HTML-CSS/09-animations/Andrew/final project/Wallet.html
+++ b/01-HTML-CSS/09-animations/Andrew/final project/Wallet.html
@@ -53,7 +53,7 @@
             <div class="header__icon__notification" id="note4"></div>
             <div class="header__icon__notification" id="note5"></div>
             <div class="header__icon__notification" id="note6"></div>
-            <div id="hide"></div>
+            <div id="shadow"></div>
         </button>
     </div>
     <div class="wallet">
