--- a/02-JavaScript/05-Objects and Arrays/Lior/Lior.html
+++ b/02-JavaScript/05-Objects and Arrays/Lior/Lior.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="index2.js"></script>
+    <script src="Lior_3.js"></script>
 </body>
 </html>
