--- a/01-HTML-CSS/09-animations/Andrew/final project/Wallet.html
+++ b/01-HTML-CSS/09-animations/Andrew/final project/Wallet.html
@@ -47,13 +47,96 @@
                     style="fill: none; stroke: #df9564; stroke-miterlimit: 10; stroke-width: 1.5px;"
                     transform="matrix(1, 0, 0, 1, 164.981976, 87.621326)"></path>
             </svg>
-            <div class="header__icon__notification" id="note1"></div>
-            <div class="header__icon__notification" id="note2"></div>
-            <div class="header__icon__notification" id="note3"></div>
-            <div class="header__icon__notification" id="note4"></div>
-            <div class="header__icon__notification" id="note5"></div>
-            <div class="header__icon__notification" id="note6"></div>
+            <div class="header__icon__notification" id="note1">
+                <svg viewBox="0 0 4091.27 4091.73">
+                    <g>
+                        <path
+                            d="M4030.06 2540.77c-273.24,1096.01 -1383.32,1763.02 -2479.46,1489.71 -1095.68,-273.24 -1762.69,-1383.39 -1489.33,-2479.31 273.12,-1096.13 1383.2,-1763.19 2479,-1489.95 1096.06,273.24 1763.03,1383.51 1489.76,2479.57l0.02 -0.02z" />
+                        <path fill="#2E3137"
+                            d="M2947.77 1754.38c40.72,-272.26 -166.56,-418.61 -450,-516.24l91.95 -368.8 -224.5 -55.94 -89.51 359.09c-59.02,-14.72 -119.63,-28.59 -179.87,-42.34l90.16 -361.46 -224.36 -55.94 -92 368.68c-48.84,-11.12 -96.81,-22.11 -143.35,-33.69l0.26 -1.16 -309.59 -77.31 -59.72 239.78c0,0 166.56,38.18 163.05,40.53 90.91,22.69 107.35,82.87 104.62,130.57l-104.74 420.15c6.26,1.59 14.38,3.89 23.34,7.49 -7.49,-1.86 -15.46,-3.89 -23.73,-5.87l-146.81 588.57c-11.11,27.62 -39.31,69.07 -102.87,53.33 2.25,3.26 -163.17,-40.72 -163.17,-40.72l-111.46 256.98 292.15 72.83c54.35,13.63 107.61,27.89 160.06,41.3l-92.9 373.03 224.24 55.94 92 -369.07c61.26,16.63 120.71,31.97 178.91,46.43l-91.69 367.33 224.51 55.94 92.89 -372.33c382.82,72.45 670.67,43.24 791.83,-303.02 97.63,-278.78 -4.86,-439.58 -206.26,-544.44 146.69,-33.83 257.18,-130.31 286.64,-329.61l-0.07 -0.05zm-512.93 719.26c-69.38,278.78 -538.76,128.08 -690.94,90.29l123.28 -494.2c152.17,37.99 640.17,113.17 567.67,403.91zm69.43 -723.3c-63.29,253.58 -453.96,124.75 -580.69,93.16l111.77 -448.21c126.73,31.59 534.85,90.55 468.94,355.05l-0.02 0z" />
+                    </g>
+                </svg>
+                <div class="header__icon__notification__message">
+                    BTC is up 17% in the past 24hr!
+                </div>
+            </div>
+            <div class="header__icon__notification" id="note2">
+                <svg viewBox="0 0 2000 1975.1">
+                    <g>
+                        <path d="M1047.4,982.5l683.3,678.3c359.1-380.9,359.1-975.7,0-1356.6" />
+                        <path d="M997.5,1027.4l-673.3,668.3l673.3,279.3l673.3-279.3" />
+                        <path d="M972.6,957.6l698.3-693.3L1027.4,0L389,1541.2L972.6,957.6z" />
+                        <path d="M0,982.5c-0.5,252.3,95.9,495.1,269.3,678.3l668.3-1611" />
+                    </g>
+                </svg>
+                <div class="header__icon__notification__message">
+                    KLAY is down 20.5% in the past 24hr!
+                </div>
+            </div>
+            <div class="header__icon__notification" id="note3">
+                <svg viewBox="0 0 336.41 337.42">
+                    <g>
+                        <path class="cls-1" d="M168.2.71l41.5,42.5L105.2,147.71l-41.5-41.5Z" />
+                        <path class="cls-1" d="M231.2,63.71l41.5,42.5L105.2,273.71l-41.5-41.5Z" />
+                        <path class="cls-1" d="M42.2,126.71l41.5,42.5-41.5,41.5L.7,169.21Z" />
+                        <path class="cls-1" d="M294.2,126.71l41.5,42.5L168.2,336.71l-41.5-41.5Z" />
+                    </g>
+                </svg>
+                <div class="header__icon__notification__message">
+                    BUSD is down 10% in the past 24hr!
+                </div>
+            </div>
+            <div class="header__icon__notification" id="note4">
+                <svg viewBox="0 0 2000 2000">
+                    <g>
+                        <path
+                            d="M1024 659H881.12v281.69h224.79v117.94H881.12v281.67H1031c38.51 0 316.16 4.35 315.73-327.72S1077.44 659 1024 659z" />
+                        <path
+                            d="M1000 0C447.71 0 0 447.71 0 1000s447.71 1000 1000 1000 1000-447.71 1000-1000S1552.29 0 1000 0zm39.29 1540.1H677.14v-481.46H549.48V940.7h127.65V459.21h310.82c73.53 0 560.56-15.27 560.56 549.48 0 574.09-509.21 531.41-509.21 531.41z" />
+                    </g>
+                </svg>
+                <div class="header__icon__notification__message">
+                    DOGE is up 69% in the past 24hr!
+                </div>
+            </div>
+            <div class="header__icon__notification" id="note5">
+                <svg viewBox="0 0 1000 1000">
+                    <style>
+                        .axs {
+                            fill: #2E3137;
+                        }
+                    </style>
+                    <g>
+                        <path
+                            d="M500,0c276.1,0,500,223.9,500,500s-223.9,500-500,500S0,776.1,0,500S223.9,0,500,0L500,0z" />
+                        <path class="axs"
+                            d="M272,330.8c0,0-53.8-43-57.5,63.2c-3.7,82.3-3.6,242.1,34.5,317.6
+                        c16.1,28.4,37.6,19.7,77.6-8.6c34.8-25.7,160.7-141.7,214-192.6S702,313.5,724.5,412.7c8.9,41.7,19.9,77.1,11.5,169.6
+                        c-2.6,28.5-14.8,50.1-70.4,11.5c-42-27-81.9-56-81.9-56s-7.7-13.8-25.9,8.6c-14.3,17.9-21.5,22.3,1.4,35.9
+                        c23,13.6,139.3,93.8,183.9,106.3c36.8,10.7,57.8,10.5,58.9-61.8c-0.2-57.4-3.5-221.7-24.4-291.7c-15.8-43.6-39-63.4-89.1-14.4
+                        S480.4,522.9,394,592.3c-57.3,43-81.8,81.8-103.4,10.1c-15.2-54.3-34.9-223.3,27.3-191.1c38.9,18.6,58.3,18.5,43.1,30.2
+                        c-15.2,11.6-58.9,51.7-58.9,51.7s-13.5,10.9-7.2,34.5c6.3,16.5,6.3,24.7,40.2-7.2s58.9-56,58.9-56s5.4-8.5,21.5,7.2
+                        s18.7,20.1,18.7,20.1s4.3,11.7,21.5-8.6c17.3-20.3,28.4-32.7-4.3-51.7C418.8,412.3,272,330.8,272,330.8L272,330.8z" />
+                    </g>
+                </svg>
+                <div class="header__icon__notification__message">
+                    AXS is up 12% in the past 24hr!
+                </div>
+            </div>
+            <div class="header__icon__notification" id="note6">
+                <svg viewBox="0 0 254 254">
+                    <g>
+                        <path class="st1" d="M171.8,130.3c4.4-7.6,11.5-7.6,15.9,0l27.4,48.1c4.4,7.6,0.8,13.8-8,13.8h-55.2c-8.7,0-12.3-6.2-8-13.8
+                        L171.8,130.3z M118.8,37.7c4.4-7.6,11.4-7.6,15.8,0l6.1,11L155.1,74c3.5,7.2,3.5,15.7,0,22.9l-48.3,83.7
+                        c-4.4,6.8-11.7,11.1-19.8,11.6H46.9c-8.8,0-12.4-6.1-8-13.8L118.8,37.7z" />
+                    </g>
+                </svg>
+                <div class="header__icon__notification__message">
+                    AVAX is up 24% in the past 24hr!
+                </div>
+            </div>
             <div id="shadow"></div>
+            
         </button>
     </div>
     <div class="wallet">
