--- a/01-HTML-CSS/08-Responsive/michaeldub/mishatemp/index.html
+++ b/01-HTML-CSS/08-Responsive/michaeldub/mishatemp/index.html
@@ -12,7 +12,17 @@
 
 <body>
 
+   
     <div class='bigwrapper'>
+
+        <div class="cloud">
+            <img src="img/cloud.png" alt="">
+        </div>
+
+        <div class="cloud2">
+            <img src="img/cloud.png" alt="">
+        </div>
+    
 
         <section class="schetop">
 
